# chromadb-rag

./: .dockerignore  .gitignore  docker-compose.yml
backend/: .example.env  .~lock.evaluation_results.csv#  Dockerfile  diagnose_chromadb.py  evaluate_rag.py  evaluation_results.csv  haystack_evaluation_20260130_145708.csv  pyproject.toml  requirements.txt  requirements_full.txt  run.py
backend/app/: config.py  logger.py  main.py  model.py  rag_pipeline.py  test_ollama_connection.py
backend/components/: ollama_reranker.py
backend/evaluation/v1/: data.py  evaluator.py  metrics.py  visualize.py
backend/evaluation/v2/: haystack_evaluator.py
backend/evaluation/v3/: run_evaluation.py  run_evaluator.py
backend/evaluation_results/: results_batch_20260202_105638.csv  results_batch_20260202_143915.csv  results_batch_20260202_145815.csv  results_batch_20260202_152937.csv  summary_batch_20260202_105638.json  summary_batch_20260202_114801.json  summary_batch_20260202_151143.json
backend/evaluation_results/v3/: batch_result_20260131_184626.json  batch_result_20260131_190154.json  batch_result_20260131_194046.json  batch_result_20260131_200658.json  batch_result_20260131_202304.json  batch_result_20260131_211507.json  batch_result_20260131_213441.json  batch_result_20260131_214641.json  batch_result_20260131_215603.json  batch_result_20260131_222139.json  batch_result_20260131_222915.json  batch_result_20260201_221317.json  batch_result_20260201_223012.json  batch_result_20260201_225841.json  (+99 more)
backend/utils/: config.py  diagnose_chromadb.py  reset_chroma.py
(+11 files in other folders)
